# imagedownloader

./: LICENSE  MANIFEST.in  README.md  README.rst  config.yaml.example  google.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: test.yml
examples/: README.rst  google.py
imagedownloader/: __about__.py  __init__.py  cli.py  config.py  downloader.py  settings.py  utils.py
imgdl/: __init__.py  cli.py  downloader.py  settings.py  storage.py  utils.py
imgdl/storage/: backend.py  base.py  gcloud.py  local.py
tests/: test_ImageDownloader.py  test_downloader.py  test_storage.py  test_storage_backend.py  test_storage_base.py  test_storage_gcloud.py  test_storage_local.py  wikimedia.csv
