[metadata]
name = imgdl
author = Felipe Aguirre Martinez
author-email = faguirre@workit-software.com
summary = Bulk image downloader from a list of urls
description-file = README.md

[files]
packages =
    imgdl

[extras]
tests =
    pytest
    pytest-pep8
    pep8
    autopep8
    pytest-xdist
    pytest-cov
docs =
    jupyter
    ipython
    pandas
    invoke

[entry_points]
console_scripts =
    imgdl = imgdl.cli:main
