[metadata]
name = imgdl
author = Felipe Aguirre Martinez
author-email = felipeam86@gmail.com
summary = Bulk image downloader from a list of urls
description-file = README.rst
url = https://github.com/felipeam86/imagedownloader

[files]
packages =
    imgdl

[extras]
tests =
    pytest
    pytest-pep8
    pep8
    autopep8
    pytest-xdist
    pytest-cov
docs =
    jupyter
    ipython
    pandas
    invoke

[entry_points]
console_scripts =
    imgdl = imgdl.cli:main
